--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
   <!-- Site Footer -->
   <footer role="contentinfo">
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Fredrick Kungu. All rights reserved.</p>
     <p><a href="#top">Back to top</a></p>
   </footer>
 
 </body>
+
 </html>
